# tli-bd-assistant

./: .gitignore  README.md
.cursor/plans/: pob2-informed-optimization-plan_22fd02e6.plan.md  pob2对标优化_2fdc4441.plan.md
archive/: README.md
archive/doc-reference/: 闪电链.md
archive/meta-json/: gears_unique.json  support_skills_with_details.json
bindings/: AffixData.ts  CalculatorInput.ts  CalculatorOutput.ts  DamageBreakdown.ts  DamageWithHistory.ts  EhpSeries.ts  ItemData.ts  MechanicDefinition.ts  MechanicState.ts  MultiplierBreakdown.ts  PreviewSlot.ts  SkillData.ts  SkillLevelData.ts  SkillScalingRule.ts  SkillType.ts  SlotType.ts  TargetConfig.ts  TraceEntry.ts  ZoneSource.ts  index.ts
doc/: POB2 核心计算系统架构.md  POB2 项目架构与核心机制分析.md  单元测试结果与乘区溯源.md  开发日志.md  新增机制实施指南.md  火炬之光：无限 BD 决策辅助系统 - 开发规划 (V2.6).md
meta-json/: active_skills_with_details.json
supabase/: schema.sql  seed.sql
tli-core/: Cargo.toml  build.sh
tli-core/.cargo/: config.toml
tli-core/src/: calculator_cache.rs  condition_ast.rs  conversion.rs  lib.rs  mechanics.rs  modifiers.rs  pipeline.rs  stats.rs  tags.rs  types.rs  utils.rs
tli-core/src/data/: tags_registry.json
tli-core/tests/: export_bindings.rs
